<resources>
    <string name="app_name">Alarm_clock</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setUp">УСТАНОВИТЬ</string>
    <string name="alarm">БУДИЛЬНИК</string>
    <string name="stopwatch">СЕКУНДОМЕР</string>
    <string name="timer">ТАЙМЕР</string>
    <string name="stop">ПАУЗА</string>
    <string name="start">НАЧАТЬ</string>
    <string name="time">00:00</string>
    <string name="times">00:00:00</string>

</resources>