<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/alarm"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#86D50000"
        android:padding="16dp"
        android:text="@string/alarm"
        android:textSize="18sp" />

    <Button
        android:id="@+id/stopwatch"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:backgroundTint="#86D50000"
        android:padding="16dp"
        android:text="@string/stopwatch"
        android:textSize="18sp" />

    <Button
        android:id="@+id/timer"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:backgroundTint="#86D50000"
        android:padding="16dp"
        android:text="@string/timer"
        android:textSize="18sp" />

</LinearLayout>